@@ -28,7 +28,6 @@ setMethod("initialize", "MxRObjective",
 		.Object@objfun <- objfun
 		.Object@name <- name
 		.Object@data <- data
-		.Object@dependencies <- character()
 		return(.Object)
 	}
 )
